# python-wex-addon-dev-php

./: README.md  pyproject.toml  requirements.txt
.wex/: config.yml
.wex/python/app_manager/: requirements.txt
src/wexample_wex_addon_dev_php/: php_addon_manager.py
src/wexample_wex_addon_dev_php/config_value/: php_package_readme_config_value.py
src/wexample_wex_addon_dev_php/file/: php_composer_json_file.py
src/wexample_wex_addon_dev_php/workdir/: php_laravel_workdir.py  php_package_workdir.py  php_packages_suite_workdir.py  php_symfony_workdir.py  php_workdir.py  symfony_workdir.py
