[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-wex-addon-dev-php"
version = "0.0.5"
description = "Python dev addon for wex"
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs>=23.1.0",
    "cattrs>=23.1.0",
    "wexample-wex-core==6.0.47",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-wex-dev-python"

[project.optional-dependencies]
dev = [
    "pytest",
    "wexample-filestate-php==0.0.1",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_wex_addon_dev_php"
from = "src"
